ultimo commit desde ordenador